# Kidney-Stone-Detection-Model

./: .gitignore  Kidney .py  Kidney Disease Detection Using Transfer Learning Techniques.docx  Kidney.py  app.py  efficient-net.ipynb  pyproject.toml  requirements.txt  tempCodeRunnerFile.py
Model/: Model.h5
