[tool.poetry]
name = "muj-hackathon"
version = "0.1.0"
description = ""
authors = ["Shivansh Goel <shivanshgoel009@gmail.com>"]
readme = "README.md"
packages = [{include = "muj_hackathon"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.19.0"
gradio = "^3.19.1"
matplotlib = "^3.7.0"
tqdm = "^4.65.0"
seaborn = "^0.12.2"
keras = "^2.11.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.2"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
